@@ -1,3 +1,7 @@
+Fri Jun 22 19:26:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc: Handle window resize in main menu
+
 Wed Jun 20 18:56:35 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/help.c: actually use narglist in do_script()
